<resources>
    <string name="app_name">Amigos</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="upload">UPLOAD</string>
    <string name="choose_image_from">Choose Image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="start_typing">Start typing</string>
    <string name="pinch_to_zoom">pinch to zoom</string>
    <string name="rupesh_bagde">Rupesh Bagde</string>
    <string name="android_application_developer">Android Application Developer</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="group_title">Group Title</string>
    <string name="group_description">Group Description</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_participant">Add Participant</string>
    <string name="leave_group">Leave Group</string>
    <string name="participants_n">Participants (N)</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">SAVE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="register">REGISTER</string>
    <string name="developer">DEVELOPER</string>
    <string name="logout">LOGOUT</string>
    <string name="phone_">Phone :</string>
    <string name="email_">Email :</string>
    <string name="friend_requests">FRIEND REQUESTS</string>
    <string name="add_post">Add Post</string>
    <string name="create_group">Create Group</string>
    <string name="add_group_participant">Add Group Participant</string>
    <string name="group_info">Group Info</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="group_chats">Group Chats</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="like">LIKE</string>
    <string name="comment">COMMENT</string>
    <string name="share">SHARE</string>
</resources>