<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/softbackground"
    android:padding="18dp"
    tools:context=".AddPostActivity"
    tools:ignore="Overdraw">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pTitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_border_rounded_corner"
            android:hint="@string/title"
            android:padding="10dp"
            android:singleLine="true" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pLocationEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/blue_border_rounded_corner"
                android:hint="@string/location"
                android:padding="10dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/pLocationBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/blue_border_rounded_corner"
                android:src="@drawable/ic_gps_black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gallery"
            android:minHeight="250dp"
            android:scaleType="fitCenter" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pDescriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_border_rounded_corner"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pUploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>