<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/softbackground"
    android:fitsSystemWindows="true"
    tools:context=".GroupInfoActivity"
    tools:ignore="Overdraw">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/groupIconIv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/soft"
                android:scaleType="fitXY"
                android:src="@drawable/ic_group_primary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/createdByTv"
                android:background="#54000000"
                android:padding="5dp"
                android:textColor="#ffffff" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createdByTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#54000000"
                android:padding="5dp"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/editGroupTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/edit_group"
            android:textColor="#000000"
            app:drawableStartCompat="@drawable/ic_edit_white"
            app:drawableTint="#000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addParticipantTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/add_participant"
            android:textColor="#000000"
            app:drawableStartCompat="@drawable/ic_addperson_white"
            app:drawableTint="#000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/leaveGroupTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/leave_group"
            android:textColor="#000000"
            app:drawableStartCompat="@drawable/ic_delete_white"
            app:drawableTint="#000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/participantsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/participants_n"
            android:textColor="#000000"
            app:drawableStartCompat="@drawable/ic_users_black"
            app:drawableTint="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participantsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_participant_add" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>