<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/softbackground"
    android:fitsSystemWindows="true"
    tools:context=".GroupChatActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/groupIconIv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_group_white"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/groupTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/groupIconIv"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="53dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:stackFromEnd="true"
        tools:listitem="@layout/row_groupchat_left" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/attachBtnLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/choose_image_from"
                android:textAlignment="center"
                android:textColor="#000000" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/cameraBtnLL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/camera" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/camera"
                        android:textColor="#212121"
                        android:textSize="15sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/galleryBtnLL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/gallery" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/gallery"
                        android:textColor="#212121"
                        android:textSize="15sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/soft"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/attachBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/blue_border_rounded_corner"
                android:src="@drawable/ic_attach_black"
                app:tint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/messageEt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/blue_border_rounded_corner"
                android:hint="@string/start_typing"
                android:inputType="textCapSentences|textMultiLine"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor_color" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/sendBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/blue_border_rounded_corner"
                android:src="@drawable/ic_send"
                app:tint="@color/colorPrimary" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>